appId: ${APP_ID}
env:
  Name: User
  EMAIL: user@test.com
  PASSWORD: password
---
- launchApp
- runFlow: ../utils/onboarding-and-login.yaml
- assertVisible: Home
- tapOn:
    id: settings-tab
- assertVisible: Settings
- scroll
- assertVisible: Logout
