appId: ${APP_ID}
---
- clearState
- launchApp
- assertVisible: RN Starter
- assertVisible: "Let's Get Started"
- tapOn: "Let's Get Started"
- assertVisible: Sign In
